fixed topContainer alignment in mobile view

--- a/src/components/animals/animals.module.scss
+++ b/src/components/animals/animals.module.scss
@@ -1,9 +1,89 @@
 @import "../../global.scss";
 
-.borders {
-    border: 1px solid black;
+.bodyContainer {
+  padding: 15px;
 }
 
-.hi {
-    margin: 40px;
+.flexRowReverse {
+  flex-direction: row-reverse;
+}
+
+.topCardContainer {
+	border-bottom: 1px solid #DEDECB;
+	padding: 15px 15px;
+}
+
+.bottomCardContainer {
+	margin-bottom: 30px;
+	padding: 15px 15px;
+
+}
+
+.adoptButtonContainer {
+	display: flex;
+	justify-content: center;
+}
+
+.imgBorder {
+	border: 1px solid black;
+	height: 100px;
+	width: 100%;
+}
+
+.imgCenter {
+	display: flex;
+	justify-content: center;
+}
+
+.petName {
+	font-size: 22px;
+}
+
+.card {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  word-wrap: break-word;
+  background-color: white;
+  border: 1px solid #CACACA;
+  margin-bottom: 10px;
+}
+
+@media (min-width: 30em) {
+	.bodyContainer {
+		display: flex;
+		justify-content: center;
+		> div {
+			width: 90%;
+			max-width: 700px;
+		}
+	}
+
+	.card {
+		position: relative;
+		display: flex;
+		flex-direction: row;
+		word-wrap: break-word;
+		background-color: white;
+		border: 1px solid #CACACA;
+		margin-bottom: 10px;
+	}
+
+	.imgBorder {
+		border: 1px solid black;
+		height: 60px;
+		width: 60px;
+	}
+
+	.topCardContainer {
+		width: 33.33%;
+		border-bottom: 1px solid #DEDECB;
+		padding: 15px 15px;
+	}
+
+	.bottomCardContainer {
+		width: 66.66%;
+		margin-bottom: 30px;
+		padding: 15px 15px;
+	}
 }
